# Qishop1-airport-weather-profiler

./: AirportWeatherProfiler.pyw  NO_PYTHON_WINDOWS_README.md  README.md  UI_README.md  build_windows_exe.bat  build_windows_exe.ps1  pyproject.toml  run_gui.bat  sample_local.csv  test_noaa_isd_parser.py  双击启动机场天气统计器.bat  构建Windows便携EXE说明.txt
configs/: KLAX.yaml  RJCC.yaml
wxprofiler/: cli.py  config.py  gui.py  model.py  timeutil.py
wxprofiler/analysis/: flight_category.py  merge.py  stats.py  wind.py
wxprofiler/output/: charts.py  compare.py  html_report.py  pdf_report.py  tables.py  writers.py
wxprofiler/parsing/: normalize.py
wxprofiler/sources/: cache.py  iem_asos.py  local_csv.py  meteostat.py  noaa_isd.py  ourairports.py
